Check class compiler to luaLaTeX

--- a/source/fefu_presentation.dtx
+++ b/source/fefu_presentation.dtx
@@ -1,5 +1,5 @@
 % \iffalse meta-comment
-% !TEX program  = xeLaTeX
+% !TEX program  = luaLaTeX
 %<*driver>
 \ProvidesFile{fefu_presentation.dtx}
 %</driver>
