--- a/source/fefu_style_default.dtx
+++ b/source/fefu_style_default.dtx
@@ -1,5 +1,5 @@
 % \iffalse meta-comment
-% !TEX program  = xeLaTeX
+% !TEX program  = luaLaTeX
 %<*driver>
 \ProvidesFile{fefu_style_default.dtx}
 %</driver>
